Make the new value objects records #12065
NodeListEntry, ContentListEntry and FieldValues are plain data carriers,
so they say so - matching DeleteNodeResult.Result and
ApplyNodePermissionsResult.BranchResult, and dropping hand-written
equals, hashCode and toString along with builders that only ever set
every component.

Params and Result types keep their builders: named arguments carry the
meaning of a bare path-plus-boolean, and every sibling in the API is
built the same way.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01PT3t5hDXj91Sk6idKRQwBs